# pihole-wtm

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json  release-please-config.json
.ddev/: config.yaml
.ddev/commands/host/: pip-sync
.ddev/commands/web/: rdap
.github/workflows/: ci.yml  release-please.yml  release.yml
.husky/: commit-msg  post-merge
backend/: pyproject.toml
backend/app/: config.py  log.py  main.py
backend/app/models/: pihole.py  tracker.py
backend/app/routers/: auth.py
backend/app/services/: database.py  heuristic.py  rdap.py  sources.py  stats.py  sync.py  sync_manager.py
backend/app/services/auth/: config_store.py  middleware.py  session_store.py
backend/app/services/disconnect/: loader.py  source.py
backend/app/services/disconnectme/: source.py
backend/app/services/pihole/: api_client.py
backend/app/services/trackerdb/: enricher.py  loader.py  repository.py  source.py
backend/scripts/: rdap_test.py
backend/tests/: conftest.py  test_api_endpoints.py  test_auth_routes.py  test_database.py  test_heuristic.py  test_pihole_api_client.py  test_rdap.py  test_session_middleware.py  test_session_store.py  test_sync.py  test_tracker_sources.py
docker/: nginx.conf
docs/: architecture.md  authentication.md  configuration.md  deployment.md  development.md  device-info-enrichment-plan.md  device-linking-plan.md  overview.md  project-structure.md  release-prep.md  roadmap.md  tech-debt.md  testing.md  tracker-categories.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: App.vue  main.ts  router.ts  style.css
frontend/src/composables/: useAuth.ts  useDeviceGroups.ts  useHealth.ts  useReportData.ts  useScrolled.ts  useTrackerBarChart.ts
frontend/src/stores/: window.ts
frontend/src/tests/: ClientBreakdownDialog.test.ts  DeviceLinkDialog.test.ts  DomainClientsDialog.test.ts  apiFetch.test.ts  format.test.ts  useAuth.test.ts  useHealth.test.ts  useReportData.test.ts  window.store.test.ts
frontend/src/types/: api.ts
frontend/src/utils/: api.ts  chart.ts  format.ts
frontend/src/views/: DashboardView.vue  DetailedReportView.vue  DevicesReportView.vue  DomainReportView.vue  (+4 more)
(+23 files in other folders)
